fix: Network icon alignment

--- a/apps/web/src/features/organizations/components/AddAccounts/styles.module.css
+++ b/apps/web/src/features/organizations/components/AddAccounts/styles.module.css
@@ -1,5 +1,6 @@
 .safeRow {
   display: grid;
-  grid-template-columns: 10fr 3fr;
+  grid-template-columns: 8fr 3fr;
   align-items: center;
+  width: 100%;
 }
